Fixed issue with block2 spacing Added justify-content:space between to main block2 in order to get images to center. Text below images in block2 were also adjusted to be centered to each image above text.

--- a/style.css
+++ b/style.css
@@ -60,21 +60,27 @@ a {
     font-weight: bolder;
     font-size: 36px;
     text-align: center;
+    padding-top: 30px;
 }
 
 .block2 {
     display: flex;
     justify-content: space-between;
+    flex: 1;
+    margin: 0px 200px;
+    gap: 20px;
+    
 
 }
 
 .block3 {
     display:flex;
     flex-direction: column;
+    background-color: #e5e7eb ;
 }
 
 .supplies {
-    width: 650px;
+    width: auto;
     height: auto;
     padding: 60px;
     flex: 0 1 650; 
@@ -82,13 +88,54 @@ a {
 }
 
 .text1 {
-    width: 600px;
+    width: auto;
     font-size: 18px;
     color: #e5e7eb;
-    
     flex: 1 1 auto;
-     
 }
+
 .pic {
+    border-style:ridge; 
+    width: 300px;
+    height: 300px;  
+    border-radius: 10px; 
+    border-color: #3882f6;
+    margin-top: 40px;
+  
     
 }
+
+.text2-1 {
+    max-width: 300px;
+    height: auto; 
+    flex: 1;  
+    text-align: center;
+    padding-bottom:  20px;
+   
+    
+}
+
+.text2-2 {
+    max-width: 300px;
+    flex: 1;  
+    text-align: center;
+    padding-bottom:  20px;
+    
+}
+
+.text2-3 {
+    max-width: 300px;
+    flex: 1;  
+    text-align: center;
+    padding-bottom:  20px;
+   
+}
+
+.text2-4 {
+    max-width: 300px;
+    flex: 1;  
+    text-align: center;
+    padding-bottom:  20px;
+  
+}
+
